Updated Documentation in 'Pet News' section

--- a/news.html
+++ b/news.html
@@ -129,23 +129,18 @@
 
 		<div class="relative w-[17.5rem] sm:w-[15.5rem] md:w-[19rem] lg:w-[27rem] xl:w-[35rem] h-80 flex justify-center items-center flex-col opacity-80"
 			style="display: flex;border-radius: 4px;margin-top:20px;margin-top:20px;padding: 5px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin-left:8.5%;width: fit-content;height: min-content;padding-bottom:5%;text-align: center;vertical-align:middle;padding-right:4%;background-color:#86412d4d;padding-left:8%;padding-right:16%;margin-right:7%;">
-			<h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>World’s oldest dog living confirmed as
-					22-year-old Toy Fox Terrier.</strong></h1>
+			<h1 class="text-3xl mt-28 ml-10" style="color:white;"><strong>World’s oldest dog living confirmed as 31-years-old  Rafeiro do Alentejo.</strong></h1>
 		</div>
 		<div class="text-lg ml-10 mt-8 sm:mb-28 sm:w-10/12  flex sm:flex-row flex-col"
 			style="display: flex;border-radius: 4px;padding: 5px;align-items: center;justify-content: center;position:relative;box-shadow: #ddd;margin: auto;background-color:#090a0a4d;max-width:95%">
 			<img class="relative ml-14 w-56 h-56  object-cover rounded-2xl shadow-lg shadow-red-700/50 " width="200px"
-				height="200px" src="Assets/Images/oldestdog.jpg" style="margin-top: 5px;margin-bottom: 5px;">
+				height="200px" src="Assets/Images/oldestdog.png" style="margin-top: 5px;margin-bottom: 5px;">
 
 
 
 			<span style="padding:20px;text-align: justify;font-family: 'Josefin Sans', sans-serif;color:white;">
 				<strong>
-					The oldest dog living is Gino Wolf (USA, b. 24 September 2000), who is 22 years 52 days as verified
-					in Los Angeles, California, USA, on 15 November 2022.
-					Gino was adopted by Alex Wolf in Boulder, Colorado, in 2002. "I've taken great care of him over the
-					years and he is still in relatively very good shape...and really cute still which is surprising
-					considering his age!"
+					Bobi (born 11 May 1992) is a male purebred Rafeiro do Alentejo dog cared for by Leonel Costa of Conqueiros, Leiria, Portugal. On 2 February 2023, Bobi was confirmed as the first dog on record to live to the age of 30, along with being the oldest dog on record to ever live. On 11 May 2023, Bobi turned 31."
 				</strong>
 			</span>
 		</div>
