--- a/blogs/anuran.html
+++ b/blogs/anuran.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="content">
-                <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Most people view pets as toys rather than living beings with real feelings. Firstly, instead of adopting them, people end up buying them and on top of that they abandon them. How much more cruel can humans get?
+                <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Most people view pets as toys rather than living beings with real feelings. Firstly, instead of adopting them, people end up buying them and on top of that they abandon them. How much more cruel can humans get? Pets are not toys; they are living beings deserving of love and care. Unlike inanimate objects, pets have feelings, needs, and unique personalities. They require attention, nourishment, exercise, and social interaction. Treating them as toys can lead to neglect, harm, and suffering. Responsible pet ownership entails commitment and responsibility, ensuring their physical and emotional well-being. Pets offer companionship and unconditional love, making them an integral part of many families. Recognizing their distinct nature and treating them with respect is essential to fostering a nurturing and fulfilling bond with our animal companions, distinguishing them from mere playthings.
                 </p><br>
 
                 <h3 class="text-xl xl:text-2xl font-semibold tracking-wide">Real Story:</h3>
