--- a/adopt.html
+++ b/adopt.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./reportstary.css" />
     <link rel="stylesheet" href="./navbar.css" />
+    <link rel="stylesheet" href="introSection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
     <!-- <link rel="stylesheet" href="./mobileView.css"> -->
