--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./introSection.css" />
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="./mobileView.css" />
+    <link rel="stylesheet" href="./waves.css">
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -877,117 +878,131 @@
 
     <!-- Footer section  -->
 
-    <footer class="bg-black text-white shadow-inner pt-4 pb-8">
-      <div class="flex p-5 justify-between">
-        <div
-          class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
-        >
-          <div>
-            <a href="#top">
-              <img
-                class="rounded-full w-24 cursor-pointer"
-                src="./Assets/Images/logo.jpg"
-                alt="logo"
-              />
-            </a>
-          </div>
-          <div>
-            <div class="space-y-2">
-              <h3 class="text-2xl">Adopt a pet</h3>
-              <div>Give life to an animal in need</div>
-            </div>
-          </div>
-        </div>
+    <div>
+			<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+			  viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+			  <defs>
+				<path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+			  </defs>
+			  <g class="wave-creation">
+				<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(15,30,39,0.9)" />
+				<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(20,20,45,0.5)" />
+				<use xlink:href="#gentle-wave" x="48" y="5" fill="rgb(18,23,41,0.3)" />
+				<use xlink:href="#gentle-wave" x="48" y="7" fill="#000" />
+			  </g>
+			</svg>
+		  </div>
+		<footer class="bg-black text-white shadow-inner pt-4 pb-8">
+			<div class="flex p-5 justify-between">
+				<div
+					class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
+				>
+					<div>
+						<a href="#top">
+							<img
+								class="rounded-full w-24 cursor-pointer hover:scale-110 transition-all"
+								src="./Assets/Images/logo.jpg"
+								alt="logo"
+							/>
+						</a>
+					</div>
+					<div>
+						<div class="space-y-2">
+							<h3 class="text-2xl">Adopt a pet</h3>
+							<div>Give life to an animal in need</div>
+						</div>
+					</div>
+				</div>
 
-        <!-- Subscribe column -->
-        <div class="md:flex flex-col hidden text-center items-center flex-1">
-          <form id="subscription-form">
-          <div class="space-y-2">
-            <h3 class="text-2xl">Subscribe to our newsletter</h3>
-            <div class="text-md">
-              Get the latest news and updates delivered straight to your inbox.
-            </div>
-            <div class="text-center">
-              <input
-                class="my-1 mr-2 p-2 rounded-md text-black"
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Enter your email address"
-              />
-              <div id="error-message" class="text-red-500 hidden">Email address is required.</div>
-              <button
-                class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
-                type="submit"
-                id="subscribe-button"
-              >
-                Subscribe
-              </button>
-            </div>
-          </div>
-        </form>
-        </div>
-        <!-- Subscribe column end -->
+				<!-- Subscribe column -->
+				<div class="md:flex flex-col hidden text-center items-center flex-1">
+<form id="subscription-form">
+					<div class="space-y-2">
+						<h3 class="text-2xl">Subscribe to our newsletter</h3>
+						<div class="text-md">
+							Get the latest news and updates delivered straight to your inbox.
+						</div>
+						<div class="text-center">
+							<input
+								class="my-1 mr-2 p-2 rounded-md text-black"
+								type="email"
+								id="email"
+								name="email"
+								placeholder="Enter your email address"
+							/>
+						<div id="error-message" class="text-red-500 hidden">Email address is required.</div>
+							<button
+								class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md transition-all"
+								type="submit"
+								id="subscribe-button"
+							>
+								Subscribe
+							</button>
+						</div>
+					</div>
+</form>
+				</div>
+				<!-- Subscribe column end -->
 
-        <!-- Social icons  -->
-        <div class="flex-1 flex flex-col items-center justify-center">
-          <div class="text-2xl">Follow us on</div>
-          <div class="flex mt-2 flex-row space-x-3 my-0">
-            <div class="hover:scale-110 transition-all">
-              <a href="#" class="w-5 ml-3">
-                <!-- Facebook icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="40"
-                  height="40"
-                  class="fill-white facebook-icon"
-                  viewBox="0 0 20 20"
-                >
-                  <path
-                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
-                  />
-                </svg>
-              </a>
-            </div>
-            <div class="hover:scale-110 transition-all">
-              <a href="#" class="w-10 ml-3 mr-3">
-                <!-- Instagram icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="40"
-                  height="40"
-                  class="instagram-icon"
-                  viewBox="0 0 20 20"
-                >
-                  <path
-                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
-                  />
-                </svg>
-              </a>
-            </div>
-            <div class="hover:scale-110 transition-all">
-              <a
-                href="https://github.com/akshitagupta15june/PetMe"
-                target="_blank"
-                class="w-10 ml-3 mr-3"
-              >
-                <!-- Github icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="40"
-                  height="40"
-                  class="github-icon"
-                  viewBox="0 0 20 20"
-                >
-                  <path
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-                  />
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- Social icons end -->
+				<!-- Social icons  -->
+				<div class="flex-1 flex flex-col items-center justify-center">
+					<div class="text-2xl">Follow us on</div>
+					<div class="flex mt-2 flex-row space-x-3 my-0">
+						<div class="hover:scale-110 transition-all">
+							<a href="#" class="w-5 ml-3">
+								<!-- Facebook icon -->
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="40"
+									height="40"
+									class="hover:text-blue-500" fill="currentColor"
+									viewBox="0 0 20 20"
+								>
+									<path
+										d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+									/>
+								</svg>
+							</a>
+						</div>
+						<div class="hover:scale-110 transition-all">
+							<a href="#" class="w-10 ml-3 mr-3">
+								<!-- Instagram icon -->
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="40"
+									height="40"
+									class="hover:text-pink-500" fill="currentColor"
+									viewBox="0 0 20 20"
+								>
+									<path
+										d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+									/>
+								</svg>
+							</a>
+						</div>
+						<div class="hover:scale-110 transition-all">
+							<a
+								href="https://github.com/akshitagupta15june/PetMe"
+								target="_blank"
+								class="w-10 ml-3 mr-3"
+							>
+								<!-- Github icon -->
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="40"
+									height="40"
+									class="hover:text-gray-300" fill="currentColor"
+									viewBox="0 0 20 20"
+								>
+									<path
+										d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+									/>
+								</svg>
+							</a>
+						</div>
+					</div>
+				</div>
+				<!-- Social icons end -->
 
         <!-- Scroll to top -->
         <div class="md:pr-8 hover-effect">
