--- a/news.html
+++ b/news.html
@@ -237,6 +237,7 @@
 	<!-- Footer section  -->
 
 	<footer class="bg-black text-white shadow-inner pt-4 pb-8">
+			
 		<div class="flex p-5 justify-between">
 			<div
 				class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
@@ -244,7 +245,7 @@
 				<div>
 					<a href="#top">
 						<img
-							class="rounded-full w-24 cursor-pointer"
+							class="rounded-full w-24 cursor-pointer hover:scale-110 transition-all"
 							src="./Assets/Images/logo.jpg"
 							alt="logo"
 						/>
@@ -260,6 +261,7 @@
 
 			<!-- Subscribe column -->
 			<div class="md:flex flex-col hidden text-center items-center flex-1">
+<form id="subscription-form">
 				<div class="space-y-2">
 					<h3 class="text-2xl">Subscribe to our newsletter</h3>
 					<div class="text-md">
@@ -273,14 +275,17 @@
 							name="email"
 							placeholder="Enter your email address"
 						/>
+					<div id="error-message" class="text-red-500 hidden">Email address is required.</div>
 						<button
-							class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
+							class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md transition-all"
 							type="submit"
+							id="subscribe-button"
 						>
 							Subscribe
 						</button>
 					</div>
 				</div>
+</form>
 			</div>
 			<!-- Subscribe column end -->
 
@@ -295,7 +300,7 @@
 								xmlns="http://www.w3.org/2000/svg"
 								width="40"
 								height="40"
-								class="fill-white"
+								class="hover:text-blue-500" fill="currentColor"
 								viewBox="0 0 20 20"
 							>
 								<path
@@ -311,7 +316,7 @@
 								xmlns="http://www.w3.org/2000/svg"
 								width="40"
 								height="40"
-								class="fill-white"
+								class="hover:text-pink-500" fill="currentColor"
 								viewBox="0 0 20 20"
 							>
 								<path
@@ -331,7 +336,7 @@
 								xmlns="http://www.w3.org/2000/svg"
 								width="40"
 								height="40"
-								class="fill-white"
+								class="hover:text-gray-300" fill="currentColor"
 								viewBox="0 0 20 20"
 							>
 								<path
@@ -344,52 +349,49 @@
 			</div>
 			<!-- Social icons end -->
 
+	<!-- Scroll to top -->
+	<div class="md:pr-8 hover-effect">
+	  <a href="#top">
+		<button id="bttbutton" title="backtotop">
+		  <img src="./image.svg" class="w-6 md:w-10 md:object-left" />
+		</button>
+	  </a>
+	</div>
+	<!-- Scroll to top -->
+  </div>
 
-			<!-- Scroll to top -->
-			<div class="md:pr-8 hover-effect">
-				<a href="#top">
-					<button id="bttbutton" title="backtotop">
-						<img src="./image.svg" class="w-6 md:w-10 md:object-left"/>
-					</button>
-				</a>
-			</div>
-			<!-- Scroll to top -->
-
-			
-
-		</div>
-
-		<div
-			class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
+  <div
+	class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
+  >
+	<div class="space-y-2">
+	  <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
+	  <div class="text-md">
+		Get the latest news and updates delivered straight to your inbox.
+	  </div>
+	  <div class="text-center">
+		<input
+		  class="my-1 mr-2 p-2 rounded-md"
+		  type="email"
+		  id="email"
+		  name="email"
+		  placeholder="Enter your email address"
+		  style="color: black"
+		/>
+		<button
+		  class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
+		  type="submit"
 		>
-			<div class="space-y-2">
-				<h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
-				<div class="text-md">
-					Get the latest news and updates delivered straight to your inbox.
-				</div>
-				<div class="text-center">
-					<input
-						class="my-1 mr-2 p-2 rounded-md"
-						type="email"
-						id="email"
-						name="email"
-						placeholder="Enter your email address"
-							   style="color: black"
-
-					/>
-					<button
-						class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
-						type="submit"
-					>
-						Subscribe
-					</button>
-				</div>
-			</div>
-		</div>
-		<div id="copyright">
-			<p>Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.</p>
-		</div>
-	</footer>
+		  Subscribe
+		</button>
+	  </div>
+	</div>
+  </div>
+  <div id="copyright">
+	<p>
+	  Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
+	</p>
+  </div>
+</footer>
 	<script>
 		const date = new Date();
 		const year = date.getFullYear();
