made navbar styling consistent

--- a/blog.html
+++ b/blog.html
@@ -76,13 +76,27 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
           >
             <li>
               <a
                 href="./index.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="index.html#About"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="./index.html#meet"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
               >
             </li>
             <li>
@@ -156,7 +170,7 @@
             <li>
               <a href="./index.html#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
                 >
                   Contact Us
                   <svg
@@ -277,7 +291,6 @@
           <div class="flex mt-2 flex-row space-x-3 my-0">
             <div class="hover:scale-110 transition-all">
               <a href="#" class="w-5 ml-3">
-              
                 <!-- Facebook icon -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
