--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
           >
-            <li>
-              <a
-                href="#meet"
-                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                style=""
-                >Meet Pets</a
-              >
-            </li>
             <li>
               <a
                 href="#About"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="#meet"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                style=""
+                >Meet Pets</a
               >
             </li>
             <li>
@@ -224,7 +224,7 @@
 		</div> -->
       <!-- Scroll to top -->
 
-      <!-- SOS button 
+      <!-- SOS button
 			<div>
 				<form action="./reportstary.html" method="get" target="_blank">
 					<button id="mySBtn" title="SOS">SOS</button>
