added consistent styling to navbar

--- a/adopt.html
+++ b/adopt.html
@@ -6,7 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./reportstary.css" />
     <link rel="stylesheet" href="./navbar.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
+      crossorigin=""
+    />
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
     <!-- <link rel="stylesheet" href="./mobileView.css"> -->
     <script
@@ -71,7 +75,7 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
           >
             <li>
               <a
@@ -82,16 +86,16 @@
             </li>
             <li>
               <a
-                href="./index.html#meet"
-                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Meet Pets</a
+                href="index.html#About"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >About Us</a
               >
             </li>
             <li>
               <a
-                href="./index.html#About"
-                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >About Us</a
+                href="./index.html#meet"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
               >
             </li>
             <li>
@@ -149,7 +153,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-amber-800 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -165,7 +169,7 @@
             <li>
               <a href="./index.html#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
                 >
                   Contact Us
                   <svg
@@ -184,7 +188,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
+                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
               </a>
             </li>
             <!-- google translate -->
