--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="./mobileView.css" />
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
+      crossorigin=""
+    />
     <script
       defer
       src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"
@@ -77,13 +81,27 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
           >
             <li>
               <a
                 href="./index.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="index.html#About"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="./index.html#meet"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
               >
             </li>
             <li>
@@ -157,7 +175,7 @@
             <li>
               <a href="./index.html#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
                 >
                   Contact Us
                   <svg
@@ -176,7 +194,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
+                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
               </a>
             </li>
             <!-- google translate -->
@@ -278,7 +296,6 @@
           <div class="flex mt-2 flex-row space-x-3 my-0">
             <div class="hover:scale-110 transition-all">
               <a href="#" class="w-5 ml-3">
-              
                 <!-- Facebook icon -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
