--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
+      crossorigin=""
+    />
     <link rel="stylesheet" href="./output.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./introSection.css" />
@@ -80,19 +84,28 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+          <ul
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-sm space-y-8 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
+          >
             <li>
               <a
-                href="#meet"
-                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                >Meet Pets</a
+                href="./index.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Home</a
               >
             </li>
             <li>
               <a
-                href="#About"
+                href="index.html#About"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="./index.html#meet"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
               >
             </li>
             <li>
@@ -111,7 +124,7 @@
             </li>
             <li>
               <a
-                href="./donate1.html"
+                href="./donate.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
@@ -164,9 +177,9 @@
               >
             </li>
             <li>
-              <a href="#contact">
+              <a href="./index.html#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
                 >
                   Contact Us
                   <svg
@@ -175,7 +188,7 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="2"
-                    class="w-4 h-4 ml-1 transform translate-x-0 transition-transform"
+                    class="w-4 h-4 ml-1"
                     viewBox="0 0 24 24"
                   >
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -185,7 +198,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
+                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
               </a>
             </li>
             <!-- google translate -->
@@ -902,30 +915,33 @@
         <!-- Subscribe column -->
         <div class="md:flex flex-col hidden text-center items-center flex-1">
           <form id="subscription-form">
-          <div class="space-y-2">
-            <h3 class="text-2xl">Subscribe to our newsletter</h3>
-            <div class="text-md">
-              Get the latest news and updates delivered straight to your inbox.
+            <div class="space-y-2">
+              <h3 class="text-2xl">Subscribe to our newsletter</h3>
+              <div class="text-md">
+                Get the latest news and updates delivered straight to your
+                inbox.
+              </div>
+              <div class="text-center">
+                <input
+                  class="my-1 mr-2 p-2 rounded-md text-black"
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Enter your email address"
+                />
+                <div id="error-message" class="text-red-500 hidden">
+                  Email address is required.
+                </div>
+                <button
+                  class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
+                  type="submit"
+                  id="subscribe-button"
+                >
+                  Subscribe
+                </button>
+              </div>
             </div>
-            <div class="text-center">
-              <input
-                class="my-1 mr-2 p-2 rounded-md text-black"
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Enter your email address"
-              />
-              <div id="error-message" class="text-red-500 hidden">Email address is required.</div>
-              <button
-                class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
-                type="submit"
-                id="subscribe-button"
-              >
-                Subscribe
-              </button>
-            </div>
-          </div>
-        </form>
+          </form>
         </div>
         <!-- Subscribe column end -->
 
@@ -1053,21 +1069,19 @@
       });
     </script>
     <script>
-      
       // close the menu when a nav link is clicked
-      const menu_btn = document.querySelector('#nav-button')
-      const nav_links = document.querySelectorAll('nav ul li')
+      const menu_btn = document.querySelector("#nav-button");
+      const nav_links = document.querySelectorAll("nav ul li");
 
       nav_links.forEach((link) => {
-        link.addEventListener('click', () => {
+        link.addEventListener("click", () => {
           const currentWidth = window.innerWidth;
           console.log(currentWidth);
-          if(currentWidth <= 1024) {
+          if (currentWidth <= 1024) {
             menu_btn.click();
           }
-          
-        })
-      })
+        });
+      });
 
       // Add this JavaScript code to trigger the animation when About content comes into view
       window.addEventListener("scroll", function () {
