--- a/donate1.html
+++ b/donate1.html
@@ -274,7 +274,7 @@
           <div class="mt-4">
             <button
               type="submit"
-              class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto"
+              class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto hover:bg-zinc-700 transform hover:scale-105 transition-transform"
             >
               Submit
             </button>
