solved layout of logo

--- a/adopt.html
+++ b/adopt.html
@@ -29,7 +29,7 @@
         class="flex flex-row items-center md:flex-row md:items-center p-5"
         id="logo"
       >
-        <span class="mission-1"> Saving Lives </span>
+        <span class="mission-1"> Saving <p>Lives</p> </span>
         <a class="logo-border" href="./index.html">
           <img
             class="rounded-full logo-size"
@@ -37,7 +37,7 @@
             alt="logo"
           />
         </a>
-        <span class="mission-2"> Saving Animals </span>
+        <span class="mission-2"> Saving <p>Animals</p> </span>
         <!--
     <div class="w-full mt-8 md:mt-0">
       <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
