Updated similar 'Hovering Effect' on 'Social Icons' of 'Home' section

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white facebook-icon"
+                  class="fill-white"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -956,7 +956,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="instagram-icon"
+                  class="fill-white"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -976,7 +976,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="github-icon"
+                  class="fill-white"
                   viewBox="0 0 20 20"
                 >
                   <path
