--- a/blog.html
+++ b/blog.html
@@ -361,7 +361,7 @@
       </div>
       <div id="copyright">
         <p>
-          Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
+          Copyright &copy; <span id="date"></span> [PetMe] All Rights Reserved.
         </p>
       </div>
     </footer>
