--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
       </div>
       <div id="copyright">
         <p>
-          Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
+          Copyright &copy; <span id="date"></span> [PetMe] All Rights Reserved.
         </p>
       </div>
     </footer>
