--- a/news.html
+++ b/news.html
@@ -387,7 +387,7 @@
 			</div>
 		</div>
 		<div id="copyright">
-			<p>Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.</p>
+			<p>Copyright &copy; <span id="date"></span> [PetMe] All Rights Reserved.</p>
 		</div>
 	</footer>
 	<script>
