--- a/volunteer.html
+++ b/volunteer.html
@@ -382,7 +382,7 @@
       </div>
       <div id="copyright">
         <p>
-          Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
+          Copyright &copy; <span id="date"></span> [PetMe] All Rights Reserved.
         </p>
       </div>
     </footer>
