--- a/blog.html
+++ b/blog.html
@@ -272,19 +272,18 @@
         </div>
         <!-- Subscribe column end -->
 
-        <!-- Social icons  -->
-        <div class="flex-1 flex flex-col items-center justify-center">
+         <!-- Social icons  -->
+         <div class="flex-1 flex flex-col items-center justify-center">
           <div class="text-2xl">Follow us on</div>
           <div class="flex mt-2 flex-row space-x-3 my-0">
             <div class="hover:scale-110 transition-all">
               <a href="#" class="w-5 ml-3">
-              
                 <!-- Facebook icon -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white facebook-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -300,7 +299,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="instagram-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -320,7 +319,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="github-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
