--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -172,7 +172,7 @@
             <li>
               <a href="#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
                   Contact Us
                   <svg
