--- a/volunteer.html
+++ b/volunteer.html
@@ -91,7 +91,7 @@
                                 class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
 
                                 <a href="volunteer.html"
-                                    class=" block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become
+                                    class=" block px-4 py-2 text-sm text text-gray-700 hover:bg-gray-400 hover:text-white">Become
                                     a Volunteer</a>
 
                             </div>
@@ -105,7 +105,7 @@
                     <li>
                       <a href="./index.html#contact">
                         <button
-                          class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                          class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                         >
                           Contact Us
                           <svg
