fix font colors for light mode

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="heading-main-body">
           <div class="main-body-heading-text z-10">
             <h1 class="heading-main-body-h1"><span>Adopt</span> Me</h1>
-            <p>Give life to an animal in need.</p>
+            <p class="text-white">Give life to an animal in need.</p>
           </div>
         </div>
       </div>
@@ -334,7 +334,7 @@
                 </li>
               </ul>
               <a class="self-center pt-2" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -383,7 +383,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -438,7 +438,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -491,7 +491,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -546,7 +546,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -599,7 +599,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
               >
             </div>
           </div>
@@ -654,7 +654,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button>
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
               </a>
             </div>
           </div>
@@ -707,7 +707,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button>
+                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
               </a>
             </div>
           </div>
@@ -728,11 +728,11 @@
         >
           <p id="contact"></p>
           <h2
-            class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-gray-400"
+            class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-white"
           >
             CONTACT US
           </h2>
-          <p class="text-base text-center text_3 text-gray-400">
+          <p class="text-base text-center text_3 text-slate-200">
             Any issues! Fill the form below and our team will contact you
             shortly.
           </p>
